doc/testing.txt
error: 
i18n-yaml-rasp@1.0.0 jshint /home/dono/projetos/Nodejs/i18n-yaml-rasp
> jshint --verbose .

/home/dono/projetos/Nodejs/i18n-yaml-rasp/test/i18n.api.global.js:1
import { i18n } from '../i18n';
^^^^^^

SyntaxError: Cannot use import statement outside a module


solution: npm i -D esm
https://stackoverflow.com/questions/46487307/is-it-possible-to-use-es6-modules-in-mocha-tests
